moving around images

--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -1,4 +1,14 @@
 resources:
+  - name: c7baseami_params
+    type: params
+    version:
+      params:
+        SOURCE_AMI: "ami-ae7bfdb8"
+        VPC_ID: "vpc-266f3241"
+        SUBNET_ID: "subnet-6df12f24"
+        SECURITY_GROUP_ID: "sg-f634518c"
+        REGION: "us-east-1"
+
   - name: c7_dd_repo
     type: gitRepo
     integration: avinci_gh
