--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -645,29 +645,29 @@ jobs:
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: u14_x8664_tag
-      - IN: u14all_x8664_tag
-      - IN: u14nodall_x8664_tag
-      - IN: u14pytall_x8664_tag
-      - IN: u14javall_x8664_tag
-      - IN: u14cppall_x8664_tag
-      - IN: u14cloall_x8664_tag
-      - IN: u14golall_x8664_tag
-      - IN: u14scaall_x8664_tag
-      - IN: u14ruball_x8664_tag
-      - IN: u14phpall_x8664_tag
-      - IN: u14microbase_x8664_tag
-      - IN: u16_x8664_tag
-      - IN: u16all_x8664_tag
-      - IN: u16nodall_x8664_tag
-      - IN: u16pytall_x8664_tag
-      - IN: u16javall_x8664_tag
-      - IN: u16cppall_x8664_tag
-      - IN: u16cloall_x8664_tag
-      - IN: u16golall_x8664_tag
-      - IN: u16scaall_x8664_tag
-      - IN: u16ruball_x8664_tag
-      - IN: u16phpall_x8664_tag
+#      - IN: u14_x8664_tag
+#      - IN: u14all_x8664_tag
+#      - IN: u14nodall_x8664_tag
+#      - IN: u14pytall_x8664_tag
+#      - IN: u14javall_x8664_tag
+#      - IN: u14cppall_x8664_tag
+#      - IN: u14cloall_x8664_tag
+#      - IN: u14golall_x8664_tag
+#      - IN: u14scaall_x8664_tag
+#      - IN: u14ruball_x8664_tag
+#      - IN: u14phpall_x8664_tag
+#      - IN: u14microbase_x8664_tag
+#      - IN: u16_x8664_tag
+#      - IN: u16all_x8664_tag
+#      - IN: u16nodall_x8664_tag
+#      - IN: u16pytall_x8664_tag
+#      - IN: u16javall_x8664_tag
+#      - IN: u16cppall_x8664_tag
+#      - IN: u16cloall_x8664_tag
+#      - IN: u16golall_x8664_tag
+#      - IN: u16scaall_x8664_tag
+#      - IN: u16ruball_x8664_tag
+#      - IN: u16phpall_x8664_tag
       - IN: u16microbase_x8664_tag
       - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
@@ -1321,30 +1321,30 @@ jobs:
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: u14_x8664_tag
-      - IN: u14all_x8664_tag
-      - IN: u14nodall_x8664_tag
-      - IN: u14pytall_x8664_tag
-      - IN: u14javall_x8664_tag
-      - IN: u14cppall_x8664_tag
-      - IN: u14cloall_x8664_tag
-      - IN: u14golall_x8664_tag
-      - IN: u14scaall_x8664_tag
-      - IN: u14ruball_x8664_tag
-      - IN: u14phpall_x8664_tag
-      - IN: u14microbase_x8664_tag
-      - IN: u16_x8664_tag
-      - IN: u16all_x8664_tag
-      - IN: u16nodall_x8664_tag
-      - IN: u16pytall_x8664_tag
-      - IN: u16javall_x8664_tag
-      - IN: u16cppall_x8664_tag
-      - IN: u16cloall_x8664_tag
-      - IN: u16golall_x8664_tag
-      - IN: u16scaall_x8664_tag
-      - IN: u16ruball_x8664_tag
-      - IN: u16phpall_x8664_tag
-      - IN: u16microbase_x8664_tag
+#      - IN: u14_x8664_tag
+#      - IN: u14all_x8664_tag
+#      - IN: u14nodall_x8664_tag
+#      - IN: u14pytall_x8664_tag
+#      - IN: u14javall_x8664_tag
+#      - IN: u14cppall_x8664_tag
+#      - IN: u14cloall_x8664_tag
+#      - IN: u14golall_x8664_tag
+#      - IN: u14scaall_x8664_tag
+#      - IN: u14ruball_x8664_tag
+#      - IN: u14phpall_x8664_tag
+#      - IN: u14microbase_x8664_tag
+#      - IN: u16_x8664_tag
+#      - IN: u16all_x8664_tag
+#      - IN: u16nodall_x8664_tag
+#      - IN: u16pytall_x8664_tag
+#      - IN: u16javall_x8664_tag
+#      - IN: u16cppall_x8664_tag
+#      - IN: u16cloall_x8664_tag
+#      - IN: u16golall_x8664_tag
+#      - IN: u16scaall_x8664_tag
+#      - IN: u16ruball_x8664_tag
+#      - IN: u16phpall_x8664_tag
+#      - IN: u16microbase_x8664_tag
       - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
