--- a/images/x86_64/WindowsServer_2016/shippable.yml
+++ b/images/x86_64/WindowsServer_2016/shippable.yml
@@ -243,9 +243,9 @@ jobs:
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: w2k16_x8664_tag
-      - IN: w2k16dotnetcore_x8664_tag
-      - IN: w2k16aspnetcore_x8664_tag
+#      - IN: w2k16_x8664_tag
+#      - IN: w2k16dotnetcore_x8664_tag
+#      - IN: w2k16aspnetcore_x8664_tag
       - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
@@ -422,9 +422,9 @@ jobs:
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: w2k16_x8664_tag
-      - IN: w2k16dotnetcore_x8664_tag
-      - IN: w2k16aspnetcore_x8664_tag
+#      - IN: w2k16_x8664_tag
+#      - IN: w2k16dotnetcore_x8664_tag
+#      - IN: w2k16aspnetcore_x8664_tag
       - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
