--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -393,12 +393,12 @@ jobs:
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: c7_x8664_tag
-      - IN: c7all_x8664_tag
-      - IN: c7nodall_x8664_tag
-      - IN: c7pytall_x8664_tag
-      - IN: c7javall_x8664_tag
-      - IN: c7cppall_x8664_tag
+#      - IN: c7_x8664_tag
+#      - IN: c7all_x8664_tag
+#      - IN: c7nodall_x8664_tag
+#      - IN: c7pytall_x8664_tag
+#      - IN: c7javall_x8664_tag
+#      - IN: c7cppall_x8664_tag
       - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
@@ -563,12 +563,12 @@ jobs:
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: c7_x8664_tag
-      - IN: c7all_x8664_tag
-      - IN: c7nodall_x8664_tag
-      - IN: c7pytall_x8664_tag
-      - IN: c7javall_x8664_tag
-      - IN: c7cppall_x8664_tag
+#      - IN: c7_x8664_tag
+#      - IN: c7all_x8664_tag
+#      - IN: c7nodall_x8664_tag
+#      - IN: c7pytall_x8664_tag
+#      - IN: c7javall_x8664_tag
+#      - IN: c7cppall_x8664_tag
       - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
