--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -1407,7 +1407,7 @@ jobs:
       - IN: u16scaall_x8664_tag
       - IN: u16ruball_x8664_tag
       - IN: u16phpall_x8664_tag
-#      - IN: u16microbase_x8664_tag
+      - IN: u16microbase_x8664_tag
       - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
@@ -1585,7 +1585,7 @@ jobs:
       - IN: u16scaall_x8664_tag
       - IN: u16ruball_x8664_tag
       - IN: u16phpall_x8664_tag
-#      - IN: u16microbase_x8664_tag
+      - IN: u16microbase_x8664_tag
       - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
