--- a/shippable.yml
+++ b/shippable.yml
@@ -100,14 +100,14 @@ jobs:
       - IN: reqExec_repo_tag
       - IN: reqProc_repo_tag
       - IN: reqKick_repo_file_tag
-      - IN: redis_dd_tag
-      - IN: vault_dd_tag
-      - IN: rabbitmq_dd_tag
-      - IN: gitlab_dd_tag
-      - IN: postgres_dd_tag
+#      - IN: redis_dd_tag
+#      - IN: vault_dd_tag
+#      - IN: rabbitmq_dd_tag
+#      - IN: gitlab_dd_tag
+#      - IN: postgres_dd_tag
       - IN: api_sh_tag
       - IN: www_sh_tag
-#      - IN: mktg_sh_tag
+      - IN: mktg_sh_tag
       - IN: micro_sh_tag
       - IN: nexec_sh_tag
       - TASK:
