--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -670,7 +670,7 @@ jobs:
     dependencyMode: strict
     steps:
       - IN: trig_gcp_img_prep
-      - IN: prepami_repo
+      - IN: buildami_repo
         switch: off
       - IN: ship_bits_gcp
         switch: off
@@ -693,7 +693,7 @@ jobs:
                 - REL_VER: "master"
                 - SSH_USER: "centos"
           script:
-            - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/CentOS_7/prep
+            - pushd $(shipctl get_resource_state "buildami_repo")/gcp/x86_64/CentOS_7/prep
             - cp -R ../../../templates/prep/* .
             - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
             - export REL_VER_DASH=${REL_VER//./-}
@@ -719,7 +719,7 @@ jobs:
       - IN: node_file_pack
       - IN: cexec_file_pack
       - IN: u16reqProc_x8664_build
-      - IN: prepami_repo
+      - IN: buildami_repo
         switch: off
       - IN: ship_bits_gcp
         switch: off
@@ -735,7 +735,7 @@ jobs:
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - SSH_USER: "centos"
           script:
-            - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/CentOS_7/patch
+            - pushd $(shipctl get_resource_state "buildami_repo")/gcp/x86_64/CentOS_7/patch
             - cp -R ../../../templates/patch/* .
             - shipctl copy_file_from_resource_state "c7_x86_64_gcp_img_prep" "images.txt" .
             - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key c7_x86_64_gcp_img_prep IMAGE_FAM_NAME)
@@ -760,12 +760,12 @@ jobs:
     triggerMode: parallel
     dependencyMode: strict
     steps:
-#      - IN: c7_x8664_tag
-#      - IN: c7all_x8664_tag
-#      - IN: c7nodall_x8664_tag
-#      - IN: c7pytall_x8664_tag
-#      - IN: c7javall_x8664_tag
-#      - IN: c7cppall_x8664_tag
+      - IN: c7_x8664_tag
+      - IN: c7all_x8664_tag
+      - IN: c7nodall_x8664_tag
+      - IN: c7pytall_x8664_tag
+      - IN: c7javall_x8664_tag
+      - IN: c7cppall_x8664_tag
       - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
@@ -775,7 +775,7 @@ jobs:
       - IN: u14repLib_x8664_tag
       - IN: u16repLib_x8664_tag
       - IN: u16repLib_aarch64_tag
-      - IN: prepami_repo
+      - IN: buildami_repo
         switch: off
       - IN: c7_x86_64_gcp_img_patch
         switch: off
@@ -795,7 +795,7 @@ jobs:
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - SSH_USER: "centos"
           script:
-            - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/CentOS_7/final
+            - pushd $(shipctl get_resource_state "buildami_repo")/gcp/x86_64/CentOS_7/final
             - cp -R ../../../templates/final/* .
             - shipctl copy_file_from_resource_state "c7_x86_64_gcp_img_patch" "images.txt" .
             - export REL_VER=$(shipctl get_resource_version_name "prod_release")
@@ -830,7 +830,7 @@ jobs:
       - IN: u14repLib_x8664_tag
       - IN: u16repLib_x8664_tag
       - IN: u16repLib_aarch64_tag
-      - IN: prepami_repo
+      - IN: buildami_repo
         switch: off
       - IN: prod_release
         switch: off
@@ -851,7 +851,7 @@ jobs:
                 - SSH_USER: "centos"
                 - IMG_VER: "v6.3.4"
           script:
-            - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/CentOS_7/final
+            - pushd $(shipctl get_resource_state "buildami_repo")/gcp/x86_64/CentOS_7/final
             - cp -R ../../../templates/final/* .
             - shipctl copy_file_from_resource_state "c7_x86_64_gcp_img_final" "images.txt" .
             - export REL_VER=$(shipctl get_resource_version_name "prod_release")
@@ -874,7 +874,7 @@ jobs:
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: prepami_repo
+      - IN: buildami_repo
         switch: off
       - IN: ami_bits_access_cli
         switch: off
@@ -890,12 +890,12 @@ jobs:
       - IN: ami_reqKick_repo
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "prepami_repo")
+            - pushd $(shipctl get_resource_state "buildami_repo")
             - cd c7Base
             - ./basePack.sh c7baseami_prep ami_bits_access_cli
             - popd
     on_failure:
-      - script: pushd $(shipctl get_resource_state "prepami_repo")
+      - script: pushd $(shipctl get_resource_state "buildami_repo")
       - script: cd c7Base
       - script: cat output.txt
       - script: popd
@@ -905,7 +905,7 @@ jobs:
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: prepami_repo
+      - IN: buildami_repo
         switch: off
       - IN: ami_bits_access_cli
         switch: off
@@ -918,24 +918,24 @@ jobs:
       - IN: c7baseami_prep
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "prepami_repo")
+            - pushd $(shipctl get_resource_state "buildami_repo")
             - cd c7BasePatch
             - ./basePatchPack.sh c7baseami_patch ami_bits_access_cli c7baseami_prep
             - popd
     on_failure:
-      - script: cat $(shipctl get_resource_state prepami_repo)/c7BasePatch/output.txt
+      - script: cat $(shipctl get_resource_state buildami_repo)/c7BasePatch/output.txt
 
   - name: c7finalami_prep
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
     steps:
-#      - IN: c7_x8664_tag
-#      - IN: c7all_x8664_tag
-#      - IN: c7nodall_x8664_tag
-#      - IN: c7pytall_x8664_tag
-#      - IN: c7javall_x8664_tag
-#      - IN: c7cppall_x8664_tag
+      - IN: c7_x8664_tag
+      - IN: c7all_x8664_tag
+      - IN: c7nodall_x8664_tag
+      - IN: c7pytall_x8664_tag
+      - IN: c7javall_x8664_tag
+      - IN: c7cppall_x8664_tag
       - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
@@ -945,7 +945,7 @@ jobs:
       - IN: u14repLib_x8664_tag
       - IN: u16repLib_x8664_tag
       - IN: u16repLib_aarch64_tag
-      - IN: prepami_repo
+      - IN: buildami_repo
         switch: off
       - IN: c7baseami_patch
         switch: off
@@ -958,19 +958,19 @@ jobs:
 
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "prepami_repo")
+            - pushd $(shipctl get_resource_state "buildami_repo")
             - cd c7Exec
             - ./execPack.sh c7finalami_prep prod_release c7baseami_patch ami_bits_access
             - popd
     on_failure:
-      - script: cat $(shipctl get_resource_state prepami_repo)/c7Exec/output.txt
+      - script: cat $(shipctl get_resource_state buildami_repo)/c7Exec/output.txt
 
   - name: c7_v634_update
     type: runSh
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: prepami_repo
+      - IN: buildami_repo
         switch: off
       - IN: prod_release
         switch: off
@@ -989,9 +989,9 @@ jobs:
       - IN: u16repLib_aarch64_tag
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "prepami_repo")
+            - pushd $(shipctl get_resource_state "buildami_repo")
             - cd c7Exec
             - ./execPackUpdate.sh c7_v634_update prod_release ami-a86dc9d5 v634 ami_bits_access
             - popd
     on_failure:
-      - script: cat /build/IN/prepami_repo/gitRepo/c7Exec/output.txt
+      - script: cat /build/IN/buildami_repo/gitRepo/c7Exec/output.txt
