--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -1311,7 +1311,8 @@ jobs:
       - IN: u16pytall_dd_img
       - IN: u16nodall_dd_img
       - IN: u16javall_dd_img
-      - IN: prepami_repo
+      - IN: node_file_pack
+      - IN: buildami_repo
         switch: off
       - IN: ship_bits_gcp
         switch: off
@@ -1328,12 +1329,18 @@ jobs:
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - REL_VER: "master"
                 - SSH_USER: "root"
+                - ARCHITECTURE: "x86_64"
+                - OS: "Ubuntu_16.04"
+                - DOCKER_VER: "17.06"
           script:
-            - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/Ubuntu_16.04/prep
-            - cp -R ../../../templates/prep/* .
             - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
             - export REL_VER_DASH=${REL_VER//./-}
             - export FAM_NAME=$REL_VER_DASH"-prep-u16-x86-64"
+            - pushd $(shipctl get_resource_state "buildami_repo")/gcp/x86_64/Ubuntu_16.04/prep
+            - S3_BUCKET=$(shipctl get_resource_version_key node_file_pack S3_BUCKET)
+            - S3_FILENAME=$(shipctl get_resource_version_key node_file_pack S3_FILENAME)
+            - export S3_NODE_TARBALL_URL="$S3_BUCKET""$S3_FILENAME"
+            - cp -R ../../../templates/prep/* .
             - shipctl replace vars.json
             - packer validate -var-file=vars.json packer.json
             - packer build -machine-readable -var-file=vars.json packer.json 2>&1 | tee output.txt
@@ -1355,7 +1362,7 @@ jobs:
       - IN: node_file_pack
       - IN: cexec_file_pack
       - IN: u16reqProc_x8664_build
-      - IN: prepami_repo
+      - IN: buildami_repo
         switch: off
       - IN: ship_bits_gcp
         switch: off
@@ -1371,7 +1378,7 @@ jobs:
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - SSH_USER: "root"
           script:
-            - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/Ubuntu_16.04/patch
+            - pushd $(shipctl get_resource_state "buildami_repo")/gcp/x86_64/Ubuntu_16.04/patch
             - cp -R ../../../templates/patch/* .
             - shipctl copy_file_from_resource_state "u16_x86_64_gcp_img_prep" "images.txt" .
             - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key u16_x86_64_gcp_img_prep IMAGE_FAM_NAME)
@@ -1417,7 +1424,7 @@ jobs:
       - IN: u14repLib_x8664_tag
       - IN: u16repLib_x8664_tag
       - IN: u16repLib_aarch64_tag
-      - IN: prepami_repo
+      - IN: buildami_repo
         switch: off
       - IN: u16_x86_64_gcp_img_patch
         switch: off
@@ -1437,7 +1444,7 @@ jobs:
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - SSH_USER: "root"
           script:
-            - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/Ubuntu_16.04/final
+            - pushd $(shipctl get_resource_state "buildami_repo")/gcp/x86_64/Ubuntu_16.04/final
             - cp -R ../../../templates/final/* .
             - shipctl copy_file_from_resource_state "u16_x86_64_gcp_img_patch" "images.txt" .
             - export REL_VER=$(shipctl get_resource_version_name "prod_release")
@@ -1472,7 +1479,7 @@ jobs:
       - IN: u14repLib_x8664_tag
       - IN: u16repLib_x8664_tag
       - IN: u16repLib_aarch64_tag
-      - IN: prepami_repo
+      - IN: buildami_repo
         switch: off
       - IN: prod_release
         switch: off
@@ -1493,7 +1500,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.3.4"
           script:
-            - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/Ubuntu_16.04/final
+            - pushd $(shipctl get_resource_state "buildami_repo")/gcp/x86_64/Ubuntu_16.04/final
             - cp -R ../../../templates/final/* .
             - shipctl copy_file_from_resource_state "u16_x86_64_gcp_img_final" "images.txt" .
             - export REL_VER=$(shipctl get_resource_version_name "prod_release")
@@ -1516,7 +1523,7 @@ jobs:
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: prepami_repo
+      - IN: buildami_repo
         switch: off
       - IN: ami_bits_access_cli
         switch: off
@@ -1537,19 +1544,19 @@ jobs:
       - IN: ami_reqKick_repo
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "prepami_repo")
+            - pushd $(shipctl get_resource_state "buildami_repo")
             - cd u16Base
             - ./basePack.sh u16baseami_prep ami_bits_access_cli
             - popd
     on_failure:
-      - script: cat $(shipctl get_resource_state prepami_repo)/u16Base/output.txt
+      - script: cat $(shipctl get_resource_state buildami_repo)/u16Base/output.txt
 
   - name: u16baseami_patch
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: prepami_repo
+      - IN: buildami_repo
         switch: off
       - IN: ami_bits_access_cli
         switch: off
@@ -1562,12 +1569,12 @@ jobs:
       - IN: u16baseami_prep
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "prepami_repo")
+            - pushd $(shipctl get_resource_state "buildami_repo")
             - cd u16BasePatch
             - ./basePatchPack.sh u16baseami_patch ami_bits_access_cli u16baseami_prep
             - popd
     on_failure:
-      - script: cat $(shipctl get_resource_state prepami_repo)/u16BasePatch/output.txt #TODO change to standard syntax
+      - script: cat $(shipctl get_resource_state buildami_repo)/u16BasePatch/output.txt #TODO change to standard syntax
 
   - name: u16finalami_prep
     type: runSh
@@ -1595,7 +1602,7 @@ jobs:
       - IN: u14repLib_x8664_tag
       - IN: u16repLib_x8664_tag
       - IN: u16repLib_aarch64_tag
-      - IN: prepami_repo
+      - IN: buildami_repo
         switch: off
       - IN: u16baseami_patch
         switch: off
@@ -1607,19 +1614,19 @@ jobs:
         switch: off
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "prepami_repo")
+            - pushd $(shipctl get_resource_state "buildami_repo")
             - cd u16Exec
             - ./execPack.sh u16finalami_prep prod_release u16baseami_patch ami_bits_access
             - popd
     on_failure:
-      - script: cat $(shipctl get_resource_state prepami_repo)/u16Exec/output.txt
+      - script: cat $(shipctl get_resource_state buildami_repo)/u16Exec/output.txt
 
   - name: u16_v634_update
     type: runSh
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: prepami_repo
+      - IN: buildami_repo
         switch: off
       - IN: prod_release
         switch: off
@@ -1638,9 +1645,9 @@ jobs:
       - IN: u16repLib_aarch64_tag
       - TASK:
           script:
-            - pushd $(shipctl get_resource_state "prepami_repo")
+            - pushd $(shipctl get_resource_state "buildami_repo")
             - cd u16Exec
             - ./execPackUpdate.sh u16_v634_update prod_release ami-6158f91c v634 ami_bits_access
             - popd
     on_failure:
-      - script: cat /build/IN/prepami_repo/gitRepo/u16Exec/output.txt
+      - script: cat /build/IN/buildami_repo/gitRepo/u16Exec/output.txt
