moving the tar download out

--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -1335,7 +1335,10 @@ jobs:
           script:
             - export REL_VER_DASH=${REL_VER//./-}
             - export FAM_NAME=$REL_VER_DASH"-prep-u16-x86-64"
-            - export NODE_TARBALL_URL="https://github.com/Shippable/node/archive/$REL_VER.tar.gz"
+            - S3_FILENAME=$(shipctl get_resource_version_key "node_file_pack" "S3_FILENAME")
+            - S3_BUCKET=$(shipctl get_resource_version_key "node_file_pack" "S3_BUCKET")
+            - S3_FULL_PATH="$S3_BUCKET""$S3_FILENAME"
+            - aws s3 cp "$S3_FULL_PATH" "node.tar.gz"
             - pushd $(shipctl get_resource_state "buildami_repo")/gcp/x86_64/Ubuntu_16.04/prep
             - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
             - cp -R ../../../templates/prep/* .
@@ -1345,7 +1348,7 @@ jobs:
             - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
     on_success:
       script:
-        - shipctl put_resource_state_multi $JOB_NAME "versionName=$IMAGE_NAME" "IMAGE_NAME=$IMAGE_NAME" "IMAGE_FAM_NAME=$FAM_NAME" "REL_VER=$REL_VER"
+        - shipctl put_resource_state_multi $JOB_NAME "versionName=$IMAGE_NAME" "IMAGE_NAME=$IMAGE_NAME" "IMAGE_FAM_NAME=$FAM_NAME" "REL_VER=$REL_VER" "ARCHITECTURE=$ARCHITECTURE" "OS=$OS" "DOCKER_VER=$DOCKER_VER" "S3_NODE_TAR_URL=$S3_FULL_PATH"
         - shipctl copy_file_to_state images.txt
     on_failure:
       script:
